--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "feather-icons": "^4.28.0"
   }
 }
