--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
+    "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "bootstrap": "^5.1.3",
     "feather-icons": "^4.28.0"
   }
 }
